--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port = 8087
+spring.security.oauth2.client.registration.mywebclient.client-id = photo-app-webclient
+spring.security.oauth2.client.registration.mywebclient.client-secret = GacfAAQCFIBpXi3vea2qhINGR62SD1Ii 
+spring.security.oauth2.client.registration.mywebclient.scope = openid, profile, roles
+spring.security.oauth2.client.registration.mywebclient..authorization-grant-type = authorization_code
+spring.security.oauth2.client.registration.mywebclient.redirect-uri = http://localhost:8087/login/oauth2/code/mywebclient
